
AUTOMAKE_OPTIONS = subdir-objects

include ../flagsandlibs
include ../sources

lib_LTLIBRARIES = libcursestoolkit.la
libcursestoolkit_la_SOURCES = $(COMMONSRC)

#man1_MANS = ../resources/man/cursesmenus.1
#
#bin_PROGRAMS = cursesmenus

ctktoolkit_includedir = $(includedir)/ctk
ctktoolkit_include_HEADERS = ../src/*.h
